--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --exec ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,16 @@
   },
   "homepage": "https://github.com/maciejbaba/msg#readme",
   "dependencies": {
+    "@types/express": "^4.17.18",
+    "@types/mysql": "^2.15.22",
+    "@types/node": "^20.8.4",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.1",
+    "nodemon": "^3.0.1",
+    "npm": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
