--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/maciejbaba/msg#readme",
   "dependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/mysql": "^2.15.22",
     "@types/node": "^20.8.4",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
